[package]
name = "yaws-run-lunatic"
version = "0.0.0-202301.Jan.15"
edition = "2021"
rust-version = "1.60.0"
authors = ["pinkforest"]
description = "Yet Another Web Server HTTP/1 spec"
license = "Apache-2.0/MIT"
readme = "README.md"
homepage = "https://github/yaws-rs/yaws"
repository = "https://github/yaws-rs/yaws"
documentation = "https://docs.rs/yaws"
keywords = ["http"]
categories = ["network-programming", "web-programming::http-server"]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lunatic = { version = "0.14" }
serde = { version = "1.0" }