[package]
name = "yaws-spec-h1"
version = "0.0.0"
edition = "2021"
authors = ["pinkforest"]
description = "Yet Another Web Server HTTP/1 spec"
license = "Apache-2.0/MIT"
readme = "README.md"

[dependencies]
httparse = "1.7.1"
logos = "0.12.1"
nom = "7.1.1"
thiserror = "1.0.31"
tokio-uring = "0.3.0"

