[package]
name = "yaws"
version = "0.0.0-202301.Jan.15"
edition = "2021"
rust-version = "1.60.0"
authors = ["pinkforest"]
description = "Yet Another Web Server"
license = "Apache-2.0/MIT"
readme = "README.md"
homepage = "https://github/yaws-rs/yaws"
repository = "https://github/yaws-rs/yaws"
documentation = "https://docs.rs/yaws"
keywords = ["http"]
categories = ["network-programming", "web-programming::http-server"]

[features]

[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]

# TODO: gate via yaws-run instead of hacking with package = "x" ?
# Dependency 'yaws-run' has different source paths depending on the build target.
# Each dependency must have a single canonical source path irrespective of build target.

[target.'cfg(yaws_flavor = "io_uring")'.dependencies]
yaws-run-uring = { path = "../yaws-run-uring", version = "0.0.0-202301.Jan.15" }

[target.'cfg(yaws_flavor = "lunatic")'.dependencies]
yaws-run-lunatic = { path = "../yaws-run-lunatic", version = "0.0.0-202301.Jan.15" }
lunatic = "0.12"